New files added

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">🩺 BCaBot</h1>
+    <h1 class="title">🩺 BrCaBot</h1>
     <h4 class="subtitle">Your Personalized Cancer Knowledge Companion</h4>
     <div class="chatbox" id="chatbox">
       <div class="chat-log" id="chat-log"></div>
