--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1 class="title">🩺 BrCabot</h1>
-    <h4 class="subtitle">Your Personalized Cancer Knowledge Companion</h4>
+    <h4 class="subtitle">Your Personalized Breast Cancer Knowledge Companion</h4>
     <div class="chatbox" id="chatbox">
       <div class="chat-log" id="chat-log"></div>
       <form id="chat-form" class="chat-form">
